--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>SodaStream - Lipton Ice tea</title>
+    <title>SodaStream - 7UP FREE</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" >
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&display=swap"
@@ -29,11 +29,10 @@
         </div>
         <h2 class="es-kv__title">
           SODASTREAM<br>
-          SYROP LIPTON GREEN<br>
-          ICE TEA, 440 ML
+          SYROP 7UP FREE, 440 ML
         </h2>
         <p class="es-kv__text">
-          Teraz dzięki produktom SodaStream odtworzysz oryginalny smak LIPTON ZIELONA HERBATA w&nbsp;swoim domu, używając tylko dwóch składników. Wystarczy woda i&nbsp;syrop LIPTON ZIELONA HERBATA. Zabąbelkuj w&nbsp;ekspresie SodaStream, dodaj syrop i&nbsp;gotowe!<br>
+          Teraz dzięki produktom SodaStream odtworzysz oryginalny smak 7UP FREE w&nbsp;swoim domu, używając tylko dwóch składników. Wystarczy woda i&nbsp;syrop 7UP&nbsp;FREE. Zabąbelkuj w&nbsp;ekspresie SodaStream, dodaj syrop i&nbsp;gotowe!<br>
           Syrop SodaStream to&nbsp;mniej dźwigania, mniej jednorazowego plastiku oraz doskonały napój zawsze pod ręką, kiedy najdzie Cię na niego ochota.
         </p>
       </section>
@@ -48,10 +47,10 @@
 
       <section class="es-info">
         <h2 class="es-info__title">
-          LIPTON ICE TEA GREEN Z TAKą ilością<br>BĄBELKÓW, JAKĄ LUBISZ
+          7UP FREE Z TAKą ilością BĄBELKÓW, JAKĄ LUBISZ
         </h2>
         <p class="es-info__text">
-          Zamień zwykłą wodę w&nbsp;przepyszny, orzeźwiający napój. Wystarczy, że&nbsp;zabąbelkujesz w&nbsp;ekspresie SodaStream i&nbsp;dodasz do&nbsp;gazowanej wody odrobinę syropu LIPTON ZIELONA HERBATA. Syrop SodaStream pozwoli Ci&nbsp;uzyskać oryginalny smak LIPTON i&nbsp;dodać do niego bąbelki. To&nbsp;nie&nbsp;wszystko! Dodasz tyle bąbelków, ile lubisz. Ciesz się cudownym połączeniem zielonej herbaty i bąbelków bez wychodzenia z domu.
+          Zamień zwykłą wodę w&nbsp;przepyszny, orzeźwiający napój. Wystarczy, że&nbsp;zabąbelkujesz w&nbsp;ekspresie SodaStream i&nbsp;dodasz do&nbsp;gazowanej wody odrobinę syropu 7UP&nbsp;FREE. Syrop SodaStream pozwoli Ci&nbsp;uzyskać oryginalny smak 7UP bez cukru i&nbsp;bez sztucznych barwników. To&nbsp;nie&nbsp;wszystko! Dodatkowo będziesz w stanie dodać tyle bąbelków, ile lubisz. Ciesz się cudownym połączeniem cytrusów  bez&nbsp;wychodzenia z&nbsp;domu.
         </p>
       </section>
 
@@ -87,10 +86,10 @@
                   <div class="es-slider__slide">
                     <div>
                     <p class="es-slider__title">
-                      AŻ DO 9 LITRÓW KULTOWEGO LIPTON
+                      AŻ DO 9 LITRÓW KULTOWEGO 7UP
                     </p>
                     <p class="es-slider__text">
-                      Wypróbuj syropy SodaStream i&nbsp;przekonaj się, jak niewiele potrzeba, aby&nbsp;odtworzyć ulubiony napój. Jedna butelka koncentratu 440&nbsp;ml pozwoli Ci&nbsp;stworzyć aż&nbsp;do&nbsp;9&nbsp;litrów LIPTON ICE&nbsp;TEA GREEN.
+                      Wypróbuj syropy SodaStream i&nbsp;przekonaj się, jak niewiele potrzeba, aby&nbsp;odtworzyć ulubiony napój. Jedna butelka koncentratu 440&nbsp;ml pozwoli Ci&nbsp;stworzyć aż&nbsp;do&nbsp;9&nbsp;litrów 7UP&nbsp;FREE.
                     </p></div>
                   </div>
                 </div>
@@ -147,7 +146,7 @@
       <section class="es-your">
         <h2 class="es-your__title">Stwórz swój własny, autorski napój</h2>
         <img src="./images/glass.png" alt="" class="es-your__img">
-        <p class="es-your__text">Czy wiesz, co będzie pasować do LIPTON? Cytrusy, kruszony lód, a&nbsp;nawet świeże zioła. Nasz przepis to: szklanka z&nbsp;napojem LIPTON ICE TEA GREEN, kruszony lód i&nbsp;kilka plasterków soczystej gruszki. A&nbsp;co&nbsp;Ty przygotujesz dla swoich gości?</p>
+        <p class="es-your__text">Czy wiesz, co będzie pasować do 7UP? Cytrusy, kruszony lód, a&nbsp;nawet świeże zioła. Nasz przepis to: szklanka z&nbsp;napojem 7UP&nbsp;FREE, kostka lodu, plasterek cytryny i&nbsp;kilka listków mięty. A&nbsp;co&nbsp;Ty przygotujesz dla swoich gości?</p>
       </section>
       <section class="es-info">
         <h2 class="es-info__title">
