--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
             title="preference video"
             width="100%"
             height="auto"
-            src="https://www.youtube.com/embed/MLMmOt0gZ7U"
+            src="https://www.youtube.com/embed/AXgH3QCX1vE"
             allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
