Add lazy loading to img

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,13 @@
     <div class="es-sodastream" id="es-sodastream">
       <section class="es-kv">
         <div class="es-kv__logo">
-          <img src="images/logo.png" alt="" class="es-kv__img" >
+          <img src="./images/logo.png" alt="" loading="lazy" class="es-kv__img" >
         </div>
         <div class="es-kv__packshot">
           <p class="es-kv__bgtitle">
             Syrop
           </p>
-          <img src="./images/packshot.png" alt="" class="es-kv__packshot--photo">
+          <img src="./images/packshot.png" alt="" loading="lazy" class="es-kv__packshot--photo">
         </div>
         <h2 class="es-kv__title">
           SODASTREAM<br>
@@ -42,7 +42,7 @@
           Jedna SODASTREAM<br>
           Wiele możliwości<br>
         </h2>
-        <img src="./images/possibilities.png" alt="" class="es-posibilities__img">
+        <img src="./images/possibilities.png" alt="" loading="lazy" class="es-posibilities__img">
       </section>
 
       <section class="es-info">
@@ -55,22 +55,22 @@
       </section>
 
       <section class="es-photo">
-        <img src="./images/photo.png" alt="" class="es-photo__img">
+        <img src="./images/photo.png" alt="" loading="lazy" class="es-photo__img">
 
       </section>
 
       <section class="es-triple">
         <div class="es-triple__wrapper">
           <div class="es-triple__single">
-            <img src="./images/gas.png" alt="" class="es-triple__img">
+            <img src="./images/gas.png" alt="" loading="lazy" class="es-triple__img">
             <p class="es-triple__desc es-triple__desc--side">gazuj</p>
           </div>
           <div class="es-triple__single">
-            <img src="./images/mix.png" alt="" class="es-triple__img">
+            <img src="./images/mix.png" alt="" loading="lazy" class="es-triple__img">
             <p class="es-triple__desc es-triple__desc--center">miksuj</p>
           </div>
           <div class="es-triple__single">
-            <img src="./images/taste.png" alt="" class="es-triple__img">
+            <img src="./images/taste.png" alt="" loading="lazy" class="es-triple__img">
             <p class="es-triple__desc es-triple__desc--side">smakuj</p>
           </div>
         </div>
@@ -98,22 +98,22 @@
                     <div class="es-slider__icons">
                       <div class="es-slider__icons--single">
                         <p class="es-slider__number">1</p>
-                        <img src="./images/icon-1.png" alt="" class="es-slider__icons--img">
+                        <img src="./images/icon-1.png" alt="" loading="lazy" class="es-slider__icons--img">
                         <p class="es-slider__icons--title">Nalej wodę.</p>
                       </div>
                       <div class="es-slider__icons--single">
                         <p class="es-slider__number">2</p>
-                        <img src="./images/icon-2.png" alt="" class="es-slider__icons--img">
+                        <img src="./images/icon-2.png" alt="" loading="lazy" class="es-slider__icons--img">
                         <p class="es-slider__icons--title">Dodaj bąbelki.</p>
                       </div>
                       <div class="es-slider__icons--single">
                         <p class="es-slider__number">3</p>
-                        <img src="./images/icon-3.png" alt="" class="es-slider__icons--img">
+                        <img src="./images/icon-3.png" alt="" loading="lazy" class="es-slider__icons--img">
                         <p class="es-slider__icons--title">Dodaj syrop.</p>
                       </div>
                       <div class="es-slider__icons--single">
                         <p class="es-slider__number">4</p>
-                        <img src="./images/icon-4.png" alt="" class="es-slider__icons--img">
+                        <img src="./images/icon-4.png" alt="" loading="lazy" class="es-slider__icons--img">
                         <p class="es-slider__icons--title">Gotowe!</p>
                       </div>
                     </div>
@@ -145,7 +145,7 @@
 
       <section class="es-your">
         <h2 class="es-your__title">Stwórz swój własny, autorski napój</h2>
-        <img src="./images/glass.png" alt="" class="es-your__img">
+        <img src="./images/glass.png" alt="" loading="lazy" class="es-your__img">
         <p class="es-your__text">Czy wiesz, co będzie pasować do 7UP? Cytrusy, kruszony lód, a&nbsp;nawet świeże zioła. Nasz przepis to: szklanka z&nbsp;napojem 7UP&nbsp;FREE, kostka lodu, plasterek cytryny i&nbsp;kilka listków mięty. A&nbsp;co&nbsp;Ty przygotujesz dla swoich gości?</p>
       </section>
       <section class="es-info">
@@ -158,7 +158,7 @@
       </section>
 
       <section class="es-photo">
-        <img src="./images/products.png" alt="" class="es-photo__img">
+        <img src="./images/products.png" alt="" loading="lazy" class="es-photo__img">
 
       </section>
 
@@ -180,7 +180,7 @@
         <h2 class="es-video__subtitle">
           #PushForBetter
         </h2>
-        <img src="./images/logo.png" alt="" class="es-video__img">
+        <img src="./images/logo.png" alt="" loading="lazy" class="es-video__img">
       </section>
 
     </div>
